--- a/example.env
+++ b/example.env
@@ -1,1 +1,8 @@
-DB_PATH=./data/db.sqlite
+LRA_LOG_LEVEL=info
+
+LRA_API_HOST=::
+LRA_API_PORT=4000
+
+LRA_DB_PATH=./data/db.sqlite
+
+LRA_APTLY_CONFIG_PATH=./config/aptly.conf
