--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "db:generate": "bun scripts/db-utils && drizzle-kit generate --config=drizzle.config.ts",
         "db:migrate": "bun scripts/db-utils && drizzle-kit migrate --config=drizzle.config.ts",
         "db:push": "bun scripts/db-utils && drizzle-kit push --config=drizzle.config.ts",
-        "start": "bun run src/index.ts"
+        "start": "bun run src/index.ts",
+        "aptly-api-client:generate": "openapi-ts"
     },
     "devDependencies": {
         "@types/bun": "^1.3.3",
@@ -19,6 +20,7 @@
         "typescript": "^5.9.3"
     },
     "dependencies": {
+        "@hey-api/openapi-ts": "^0.88.0",
         "@hono/standard-validator": "^0.2.0",
         "@libsql/client": "^0.15.15",
         "@scalar/hono-api-reference": "^0.9.25",
