--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "aptly-api-client:generate": "openapi-ts"
     },
     "devDependencies": {
+        "@hey-api/openapi-ts": "0.88.0",
         "@types/bun": "^1.3.3",
         "drizzle-kit": "^0.31.7"
     },
@@ -20,7 +21,6 @@
         "typescript": "^5.9.3"
     },
     "dependencies": {
-        "@hey-api/openapi-ts": "^0.88.0",
         "@hono/standard-validator": "^0.2.0",
         "@libsql/client": "^0.15.15",
         "@scalar/hono-api-reference": "^0.9.25",
