--- a/example.env
+++ b/example.env
@@ -3,6 +3,8 @@ LRA_LOG_LEVEL=info
 LRA_API_HOST=::
 LRA_API_PORT=12151
 
+LRA_LOG_DIR=./data/logs
+
 LRA_DB_PATH=./data/db.sqlite
 
 LRA_APTLY_ROOT=./data/aptly
