update addressed some securety bugs

--- a/example.env
+++ b/example.env
@@ -10,8 +10,9 @@ LRA_DB_PATH=./data/db.sqlite
 LRA_APTLY_ROOT=./data/aptly
 LRA_APTLY_PORT=12150
 
-LRA_PRIVATE_KEY_PATH=./data/keys/private-key.gpg
-LRA_PUBLIC_KEY_PATH=./data/keys/public-key.gpg
+LRA_CONFIG_BASE_DIR=./config
+LRA_PRIVATE_KEY_PATH=./config/keys/private-key.gpg
+LRA_PUBLIC_KEY_PATH=./config/keys/public-key.gpg
 
 LRA_S3_ENDPOINT=https://api.s3.leicraftmc.de
 LRA_S3_REGION=garage
